# CFR

./: cfr.py  gj1111.pickle  gj2222.pickle  gj2223.pickle  gj3333.pickle  profile  pyproject.toml  regret_matching.py  reversi.py  test.py
