[tool.poetry]
name = "cfr"
version = "0.1.0"
description = "test impl of CounterFactual Regret minimization"
authors = ["atsuhiro-narita <alayashiki@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
